apps/base/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant-label
  template:
    metadata:
      labels:
        app: homeassistant-label
    spec:
      containers:
      - name: homeassistant
        image: homeassistant/home-assistant:stable
        ports:
          - containerPort: 8123
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1024Mi
        volumeMounts:
          - mountPath: /config
            name: homeassistant-pv-config
          - mountPath: /etc/localtime
            name: homeassistant-pv-time
            readOnly: true
          - mountPath: /config/configuration.yaml
            name: homeassistant-config
            subPath: configuration.yaml
          - mountPath: /config/secrets.yaml
            name: homeassistant-secrets
            subPath: secrets.yaml
      restartPolicy: Always
      volumes:
        - name: homeassistant-pv-config
          persistentVolumeClaim:
            claimName: homeassistant-pv-config
        - name: homeassistant-pv-time
          persistentVolumeClaim:
            claimName: homeassistant-pv-time
            readOnly: true
        - name: homeassistant-config
          configMap:
            name: homeassistant-config
        - name: homeassistant-secrets
          secret:
            secretName: homeassistant-secrets
status: {}
