apps/base/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
  namespace: homeassistant
spec:
  type: NodePort
  selector:
    app: homeassistant-label
  ports:
  - name: homeassistant
    port: 8123
    targetPort: 8123
    nodePort: 30123
